exports[`test should render a default Column 1`] = `
<div
  className="terra-Grid-col">
  Test
</div>
`;

exports[`test should render column with all size breakpoints 1`] = `
<div
  className="terra-Grid-col terra-Grid-col--tiny-12 terra-Grid-col--small-3 terra-Grid-col--medium-2 terra-Grid-col--large-1 terra-Grid-col--huge-2">
  Test
</div>
`;

exports[`test should render specified width column 1`] = `
<div
  className="terra-Grid-col terra-Grid-col--3">
  Test
</div>
`;
